--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@ function populate_header()
 {
   page_counter++;
   var name = $('#name').text();
-  var jobtitle = $('#job #title').text();
+  var jobtitle = $('#job .title').text();
   var pagenb = "page "+page_counter;
   var o = $('<div>')
   .addClass("page-header flexbox")
