--- a/resume/index.html
+++ b/resume/index.html
@@ -70,7 +70,7 @@ function populate_header()
     <li class="phone phone-fr"><i class="ico ico-phone"><label>phone:</label></i>+33.6.??.??.??.??</li>
     <li class="phone phone-ca"><i class="ico ico-phone"><label>phone:</label></i>647-???-???</li>
     <li class="skype"><i class="ico ico-videocam"></i>(skype) arnaudviala</li>
-    <li class="linkedin"><i class="ico ico-share"><label>website:</label></i>
+    <li class="linkedin"><i class="ico ico-links"><label>website:</label></i>
       <a href="https://arnaudviala.github.io">arnaudviala.github.io</a><br/>
       <i class="ico ico-blank"></i>
       <a href="https://www.linkedin.com/in/arnaudviala">linkedin.com/in/arnaudviala</a></li>
