add some margin to <h4>Languages</h4>
(as the initial <br> has been removed)

--- a/resume/index.html
+++ b/resume/index.html
@@ -109,7 +109,7 @@ function populate_header()
   <li><label>Autonomy:</label> <progress value="9" max="10">9/10</progress></li>
   -->
   </ul>
-  <h4>Languages</h4>
+  <h4 class="languages">Languages</h4>
   <ul class="w-icons w-ico-next">
   <li><i class="ico"></i>French (mother tongue)</li>
   <li><i class="ico"></i>English (fluent)</li>
