(add missing '?' in phone number)
not very interesting...

--- a/resume/index.html
+++ b/resume/index.html
@@ -68,7 +68,7 @@ function populate_header()
     <li class="email"><i class="ico ico-email"><label>email:</label></i>arnaud.viala&#64;gmail.com</li>
     <!-- published online, I'd rather not put my phone number -->
     <li class="phone phone-fr"><i class="ico ico-phone"><label>phone:</label></i>+33.6.??.??.??.??</li>
-    <li class="phone phone-ca"><i class="ico ico-phone"><label>phone:</label></i>647-???-???</li>
+    <li class="phone phone-ca"><i class="ico ico-phone"><label>phone:</label></i>647-???-????</li>
     <li class="skype"><i class="ico ico-videocam"></i>(skype) arnaudviala</li>
     <li class="linkedin"><i class="ico ico-links"><label>website:</label></i>
       <a href="https://arnaudviala.github.io">arnaudviala.github.io</a><br/>
