Get rid of "showhide.css"
It was a bad idea. When several html files include this "css" file,
it become unsustainable.
So, use only the "dont-show" class (CSS rule moved in base.css)

--- a/resume/vcards.html
+++ b/resume/vcards.html
@@ -19,9 +19,6 @@
 
 <link rel="stylesheet" type="text/css" href="vcards.css">
 
-<!-- Decide what to show or hide in 'showhide.css' -->
-<link rel="stylesheet" type="text/css" href="showhide.css">
-
 <!-- the title is used to create a default name when printing to PDF -->
 <title>VCard_ArnaudViala</title>
 
@@ -66,12 +63,12 @@ $(function() {
     
     <section id="contact"><h4>Contact</h4>
       <ul class="w-icons">
-      <li class="fulladdress"><i class="ico ico-location"><label>address:</label></i>1078 Logan Avenue - Toronto ON M4K 3G4</li>
-      <li class="basedarea"><i class="ico ico-location"><label>address:</label></i>Greater Toronto Area, Canada</li>
+      <li class="fulladdress dont-show"><i class="ico ico-location"><label>address:</label></i>1078 Logan Avenue - Toronto ON M4K 3G4</li>
+      <li class="basedarea dont-show"><i class="ico ico-location"><label>address:</label></i>Greater Toronto Area, Canada</li>
       <li class="email"><i class="ico ico-email"><label>email:</label></i>arnaud.viala&#64;gmail.com</li>
-      <!--<li class="phone phone-fr"><i class="ico ico-phone"><label>phone:</label></i><span class="private-data" data-index="phone-fr">+33.6.??.??.??.??</span></li>-->
+      <li class="phone phone-fr dont-show"><i class="ico ico-phone"><label>phone:</label></i><span class="private-data" data-index="phone-fr">+33.6.??.??.??.??</span></li>
       <li class="phone phone-ca"><i class="ico ico-phone"><label>phone:</label></i><span class="private-data" data-index="phone-ca">647-???-????</span></li>
-      <!--<li class="skype"><i class="ico ico-videocam"></i>(skype) arnaudviala</li>-->
+      <li class="skype dont-show"><i class="ico ico-videocam"></i>(skype) arnaudviala</li>
       <li class="linkedin"><i class="ico ico-links"><label>website:</label></i>
         <!--<a href="https://arnaudviala.github.io">arnaudviala.github.io</a><br/>
         <i class="ico ico-blank"></i>-->
