(minor changes in vcards' title)

--- a/resume/vcards.html
+++ b/resume/vcards.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" type="text/css" href="vcards.css">
 
 <!-- the title is used to create a default name when printing to PDF -->
-<title>VCard_ArnaudViala</title>
+<title>VCards_ArnaudViala</title>
 
 <script type="text/javascript" src="jquery-3.3.1.slim.min.js"></script>
 <script type="text/javascript" src="private-data.js"></script>
