--- a/resume/vcards.html
+++ b/resume/vcards.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8" />
 
 <link rel="stylesheet" type="text/css" href="css4print-0.1.0/paging.css">
+<link rel="stylesheet" type="text/css" href="css4print-0.1.0/rulers.css">
 <style type="text/css">@page{ size: letter; }</style>
 
 <!-- very basic CSS rules (common to everything) -->
@@ -23,6 +24,9 @@
 
 <script type="text/javascript" src="jquery-3.3.1.slim.min.js"></script>
 <script type="text/javascript" src="private-data.js"></script>
+
+<script type="text/javascript" src="css4print-0.1.0/rulers.js"
+  data-ref=".page" data-unit="cm" data-autoshow="none"></script>
 
 <script>
 // populate the 'vcards' DOM elements
