vcards: set vertical-cards size to 2"x3.5" (same as horizontal)
we had to change the layout (padding+margin) in HTML pages

--- a/resume/vcards-mixed-hv.html
+++ b/resume/vcards-mixed-hv.html
@@ -20,6 +20,13 @@
 
 <link rel="stylesheet" type="text/css" href="vcards.css">
 
+<style>
+/* readaptation of page's padding so the whole block is centered vertically */
+.page {
+  padding-top: 0.25in;
+}
+</style>
+
 <!-- the title is used to create a default name when printing to PDF -->
 <title>VCardsMixHV_ArnaudViala</title>
 
