--- a/resume/vcards-vertical.html
+++ b/resume/vcards-vertical.html
@@ -20,6 +20,16 @@
 
 <link rel="stylesheet" type="text/css" href="vcards.css">
 
+<style> /* readaptation of margin so 3x3 fit vertically */
+.vcard.vertical {
+  margin-top: 0;
+  margin-bottom: 0.1in;
+}
+.page {
+  padding-top: 0.15in;
+}
+</style>
+
 <!-- the title is used to create a default name when printing to PDF -->
 <title>VCardsVertical_ArnaudViala</title>
 
